Put concurrency caps on `DefaultServer` (configurable), even for virtual thread envs.  This allows for tight control, won't run out of file descriptors